# rust_web_scraper

./: .gitignore  Cargo.toml  README.md  build.rs  cache_website.md  disallow_urls.txt  external_library_documentation.md  processed_urls.txt  project_plan.md  ratatui_docs.md  test.md  urls.txt
data/: data.db
documentation/: openai.md  scraping_bee_docs.md  serpapi.md
output/: .gitkeep  auth0-platform-overview-and-cookies-info.md  comprehensive-guide-to-email-apis-and-smtp-comparison.md  docs-rs-homepage-overview.md  langchain-documentation-navigation-guide.md  langchain-framework-documentation.md  langchain-github-repository-overview.md  langchain-llm-development-framework-overview.md  metadata.json  openai-realtime-api-server-client-implementation-guide.md  overview-of-rust-programming-language.md  page-redirection-notice-to-langchain-api-reference.md  postmark-email-api-guide.md  postmark-email-api-overview-and-features.md  postmark-email-api-overview-and-integration.md  python-3-13-0-official-documentation-overview.md  realtime-api-beta-documentation-overview-and-integration-guide.md  scrapingbee-html-api-documentation.md  twilio-documentation-overview.md  twilio-media-streams-websocket-messages-documentation.md  twilio-messaging-api-overview.md  twilio-programmable-voice-full-documentation-and-tutorials.md  twilio-rest-apis-guide.md  twiml-voice-stream-documentation-with-examples-and-attributes.md
src/: main.rs  models.rs
src/ai/: mod.rs
src/cli/: mod.rs
src/crawling/: mod.rs  url_filter.rs
src/db/: mod.rs
src/logging/: mod.rs
src/metadata/: mod.rs
src/refresh/: mod.rs
src/scraping/: mod.rs
src/search/: mod.rs  models.rs  serpapi.rs
src/tui/: mod.rs
src/utils/: mod.rs
src/web/: mod.rs
templates/: base.html  documents.html  logs.html  search.html
