[package]
name = "rust_web_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }
tokio = { version = "1.0", features = ["full"] }

# TUI
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.27"

# Web Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
